<resources>
    <string name="app_name">Bimii</string>
    <string name="settings">Settings</string>
    <string name="enter_user_data_info">Please enter user/password</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="continue_label">Continue</string>

    <string name="login_is_empty">Username is empty</string>
    <string name="password_is_empty">Password is empty</string>
    <string name="loading">Loading...</string>
    <string name="game">Game</string>
    <string name="version">Version</string>
    <string name="available">Available</string>
    <string name="action">Action</string>
    <string name="installingen">Installation</string>
    <string name="wi_fi">Wi - fi</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="launcher_switch">Launcher switch</string>
    <string name="downloading">Downloading...</string>
    <string name="cancel">Cancel</string>

    <string name="error_info">Sorry, problem with your internet or server. Try later, please.</string>
    <string name="error_token">Logged in again, please.</string>
    <string name="not_have_games">You  haven\'t  installed  games.</string>
</resources>
