<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="72dp">

    <TextView
        style="@style/SmallTextStyle"
        android:textColor="@color/app_night_sky_color"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:text="@string/game"/>

    <include layout="@layout/divider_vertical"/>

    <TextView
        style="@style/SmallTextStyle"
        android:textColor="@color/app_night_sky_color"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:text="@string/version"/>

    <include layout="@layout/divider_vertical"/>

    <TextView
        style="@style/SmallTextStyle"
        android:textColor="@color/app_night_sky_color"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:text="@string/available"/>

    <include layout="@layout/divider_vertical"/>

    <TextView
        style="@style/SmallTextStyle"
        android:textColor="@color/app_night_sky_color"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:text="@string/action"/>

</LinearLayout>