<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background_color">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/bg_black_rect"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            style="@style/BigTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings" />

        <TextView
            style="@style/SmallTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/enter_user_data_info" />

        <EditText
            android:id="@+id/etUsername_AL"
            style="@style/EditTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:text="test"
            android:inputType="textEmailAddress"
            android:fontFamily="sans-serif"/>

        <EditText
            android:id="@+id/etPassword_AL"
            style="@style/EditTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:text="test"
            android:inputType="textPassword"
            android:fontFamily="sans-serif"/>

        <TextView
            style="@style/SmallTextStyle"
            android:id="@+id/tvContinue_AL"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:text="@string/continue_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_black_half_corners"/>

    </LinearLayout>
</RelativeLayout>