<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:background="@drawable/bg_black_edit_rect"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivGame_SITG"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="20dp"
            android:padding="2dp"
            android:background="@drawable/bg_black_edit_rect" />

        <TextView
            android:id="@+id/tvGame_SITG"
            style="@style/SmallTextStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:gravity="center_vertical|left"
            android:singleLine="true"
            android:text="@string/game" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvVersion_SITG"
        style="@style/SmallTextStyle"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/bg_black_edit_rect"
        android:singleLine="true"
        android:text="@string/version" />

    <TextView
        android:id="@+id/tvAvailable_SITG"
        style="@style/SmallTextStyle"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/bg_black_edit_rect"
        android:singleLine="true"
        android:text="@string/available" />

    <TextView
        android:id="@+id/tvAction_SITG"
        style="@style/SmallTextStyle"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:background="@drawable/bg_black_edit_rect"
        android:singleLine="true"
        android:text="@string/action"
        android:textColor="#0d63e3"
        android:textStyle="bold" />

</LinearLayout>